@@ -78,6 +78,8 @@ Fixes:
  * rand(-X, -Y) where -X > -Y was broken. [SW]
  * Fix a couple of minor memory leaks. [SW]
  * Possible crashbug in switch(), @switch, iter() and @dolist fixed. [MG]
+ * Fix crash when reading a database with an invalid lock key. Reported by
+   Covenant. [SW]
 
 Version 1.8.4 patchlevel 3                                 Mar 18,  2011
 
